# rust_chess_bitboard

./: .gitignore  Cargo.toml  TODO.txt
bitboard/: Cargo.toml
bitboard/src/: lib.rs
board/: Cargo.toml
board/src/: bitboard.rs  chessmove.rs  constants.rs  lib.rs  piece.rs
board/src/constants/: mod.rs
board/src/util/: mod.rs
chessmove/: Cargo.toml
chessmove/src/: constants.rs  lib.rs
constants/: Cargo.toml
constants/src/: lib.rs
game/: Cargo.toml
game/src/: lib.rs  moment.rs
magic/: Cargo.toml
magic/src/: between.rs  lib.rs  main.rs
movegen/: Cargo.toml
movegen/src/: lib.rs
piece/: Cargo.toml
piece/src/: lib.rs
square/: Cargo.toml
square/src/: lib.rs
ui/: Cargo.toml
ui/src/: draw.rs  main.rs  moment.rs  moving_piece.rs  promotion.rs
