[package]
name = "game"
version = "0.1.0"
authors = ["Robert Taussig <robert.taussig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board = { path = "../board" }
bitboard = { path = "../bitboard" }
movegen = { path = "../movegen" }
chessmove = { path = "../chessmove" }
piece = { path = "../piece" }
constants = { path = "../constants" }
rand = "0.8.3"
