[package]
name = "magic"
version = "0.1.0"
authors = ["Robert Taussig <robert.taussig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitboard = { path = "../bitboard" }
constants = { path = "../constants" }
