[package]
name = "movegen"
version = "0.1.0"
authors = ["Robert Taussig <robert.taussig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board = { path = "../board" }
constants = { path = "../constants" }
chessmove = { path = "../chessmove" }
bitboard = { path = "../bitboard" }
magic = { path = "../magic" }
