[package]
name = "ui"
version = "0.1.0"
authors = ["Robert Taussig <robert.taussig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board = { path = "../board" }
game = { path = "../game" }
piece = { path = "../piece" }
bitboard = { path = "../bitboard" }
chessmove = { path = "../chessmove" }
constants = { path = "../constants" }
movegen = { path = "../movegen" }
ggez = "*"
legion = "0.4.0"
rand = "0.8.3"
clipboard = "0.5.0"
regex = "1.4.3"
lazy_static = "1.4.0"
